--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
@@ -50,8 +49,13 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^12.1.4",
     "css-loader": "^6.7.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "gh-pages": "^3.2.3",
+    "jest": "^27.5.1",
+    "react-test-renderer": "^18.0.0",
     "sass": "^1.49.9"
   }
 }
